# rilua

./: .editorconfig  .gitignore  .mise.toml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  ephemeral-gen.sh  ephemeral-sign.sh  index.html  release-plz.toml
.cargo/: config.toml
.config/: nextest.toml
.github/ISSUE_TEMPLATE/: lua_compatibility.yml
.github/workflows/: ci.yml  compatibility.yml  release-binaries.yml  release-plz.yml
benches/: interpreter.rs
docs/: README.md  api.md  architecture.md  book.toml  callinfo.md  closures.md  coroutines.md  errors.md  evaluation-2026-02.md  features.md  gc.md  instructions.md  metatables.md  pipeline.md  references.md  roadmap.md  stdlib.md  strings.md  tables.md  testing.md  use-cases.md  values.md
docs/src/: SUMMARY.md  api.md  architecture.md  comparison.md  future-api.md  performance.md  references.md  stdlib.md  testing.md  use-cases.md  wasm.md
examples/: README.md  advanced.lua  advanced_embedding.rs  hello.lua  hello.rs  run_file.rs  test_native_module.lua
examples/native_module/: .gitignore  Cargo.toml
examples/native_module/src/: lib.rs
examples/wasm-demo/: Cargo.toml  README.md  build.sh
examples/wasm-demo/src/: lib.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_compiler.rs  fuzz_lexer.rs  fuzz_parser.rs  fuzz_vm.rs
pkg/: package.json  rilua_wasm_demo.d.ts  rilua_wasm_demo.js  rilua_wasm_demo_bg.wasm  rilua_wasm_demo_bg.wasm.d.ts
scripts/: bench-puc-rio.sh  benchmark-implementations.sh  benchmark-tests.sh  compare.sh  coverage.sh  perf-gate.sh  perf-regression.sh
scripts/benchmarks/: closures.lua  fib.lua  loop.lua  nested_loops.lua  tables.lua
scripts/mlua-runner/: Cargo.toml
scripts/mlua-runner/src/: main.rs
src/: api.rs  compiler.rs  conversion.rs  dynmod.rs  error.rs  handles.rs  instr.rs  lib.rs  main.rs  platform.rs  vm.rs  vm_aux.rs
src/compiler/: ast.rs  codegen.rs  exp_desc.rs  lexer.rs  mod.rs  parser.rs  token.rs
src/lua_std/: basic.rs
src/stdlib/: base.rs  coroutine.rs  debug.rs  io.rs  math.rs  mod.rs  os.rs  package.rs  string.rs  table.rs  taint.rs  testlib.rs
src/vm/: callinfo.rs  closure.rs  debug_info.rs  dump.rs  execute.rs  frame.rs  instructions.rs  intern_stats.rs  listing.rs  lua_val.rs  metatable.rs  mod.rs  object.rs  proto.rs  rehash_stats.rs  state.rs  string.rs  table.rs  undump.rs  value.rs
src/vm/execute/: runtime_ops.rs
src/vm/gc/: arena.rs  collector.rs  freeze.rs  mod.rs  pin.rs  trace.rs
src/vm/state/: api_ops.rs
tests/: dynmod.rs  integration.rs  oracle.rs  proptest_fuzz.rs  test.rs  test12.lua  test13.lua  test14.lua  test15.lua  test16.lua  test17.lua  test18.lua  test19.lua
tests/helpers/: mod.rs  oracle.rs
