[package]
name = "rilua-fuzz"
version = "0.0.0"
publish = false
edition = "2024"
rust-version = "1.92"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.rilua]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "fuzz_lexer"
path = "fuzz_targets/fuzz_lexer.rs"
doc = false

[[bin]]
name = "fuzz_parser"
path = "fuzz_targets/fuzz_parser.rs"
doc = false

[[bin]]
name = "fuzz_compiler"
path = "fuzz_targets/fuzz_compiler.rs"
doc = false

[[bin]]
name = "fuzz_vm"
path = "fuzz_targets/fuzz_vm.rs"
doc = false
